seconda versione dell'esercizio

--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
       }
 
       // FUNZIONA SOLO SE LE LETTEETTERE INIZIALI DI OGNI PAROLA SONO TUTTE MAIUSCOLE O TUTTE MINUSCOLE
+
+      //--------------------------------------------------------------------------------------------------
+      
+      // Una seconda versione dell'esercizio
+      // in cui si richiede all'utente di inserire tutti i nomi dell'elenco
+
+      // var appello = [];
+      //
+      // for (var i = 0; i < 5; i++) {
+      //   var input = prompt("inserisci il tuo cognome");
+      //   appello.push(input);
+      //
+      // }
+      // appello.sort();
+      //
+      // for (var i = 0; i < appello.length; i++) {
+      //   var elem = i + 1;
+      //   console.log(elem, appello[i]);
+      // }
+
     </script>
   </body>
 </html>
